--- a/sites/stamped.com/bin/www/templates/sdetail.html
+++ b/sites/stamped.com/bin/www/templates/sdetail.html
@@ -50,13 +50,13 @@
             <div class="header">
                 <div class="inner">
                     <div class="message"> 
-                        <p><span class="user">{{ user.screen_name }}</span> is using Stamped, a new way to put your stamp of approval on the world. <a href="http://stamped.com/download" class="signup-toggle">Download the app</a>.</p>
+                        <p><span class="user">{{ user.screen_name }}</span> is using Stamped, a new way to put your stamp of approval on the world. <a href="http://www.stamped.com/download" class="signup-toggle">Download the app</a>.</p>
                     </div> 
                 </div> 
             </div>
             <div class="wrap"> 
                 <a href="/" class="brand replaced">Stamped</a>
-                <a href="http://stamped.com/download" class="available replaced">Available on the App Store</a> 
+                <a href="http://www.stamped.com/download" class="available replaced">Available on the App Store</a> 
                 <div class="card"> 
                     <div class="top-wave"></div> 
                     <div class="inner"> 
