--- a/sites/stamped.com/bin/www/templates/index.html
+++ b/sites/stamped.com/bin/www/templates/index.html
@@ -93,7 +93,7 @@ your friends have stamped.</p>
                     <div class="bottom-wave"></div>
                 </div>
                 <div class="more">
-                    <a href="/about-us/">About Us</a>
+                    <a href="/about/">About Us</a>
                     <a href="/faq/">FAQ</a>
                     <a href="http://help.stamped.com">Help</a>
                     <a href="http://blog.stamped.com">Blog</a>
@@ -106,7 +106,7 @@ your friends have stamped.</p>
         <script type="text/javascript">
             stamped.init();
             {% if autoplay_video %}
-              console.log('autoplay vid');
+              stamped.showVideo();
             {% endif %}
         </script>
     </body>
