--- a/sites/stamped.com/bin/www/templates/index.html
+++ b/sites/stamped.com/bin/www/templates/index.html
@@ -93,12 +93,12 @@ your friends have stamped.</p>
                     <div class="bottom-wave"></div>
                 </div>
                 <div class="more">
-                    <a href="/about/">About Us</a>
-                    <a href="/faq/">FAQ</a>
+                    <a href="/about">About Us</a>
+                    <a href="/faq">FAQ</a>
                     <a href="http://help.stamped.com">Help</a>
                     <a href="http://blog.stamped.com">Blog</a>
-                    <a href="/terms-of-service/">Terms of Service</a>
-                    <a href="/privacy-policy/">Privacy Policy</a>
+                    <a href="/terms-of-service">Terms of Service</a>
+                    <a href="/privacy-policy">Privacy Policy</a>
                     <span class="copyright">&copy;2011 Stamped Inc.</span>
                 </div> 
             
