--- a/sites/stamped.com/bin/www/assets/css/screen.css
+++ b/sites/stamped.com/bin/www/assets/css/screen.css
@@ -123,7 +123,7 @@ background:-ms-gradient(linear, left top, right bottom, from(#3cf), to(#911));
 background:-o-gradient(linear, left top, right bottom, from(#3cf), to(#911));
 background:gradient(linear, left top, right bottom, from(#3cf), to(#911));
 width:660px;
-margin:94px auto 0;
+margin:112px auto 0;
 -webkit-box-shadow:0 5px 10px rgba(0,0,0,0.15);
 -moz-box-shadow:0 5px 10px rgba(0,0,0,0.15);
 -ms-box-shadow:0 5px 10px rgba(0,0,0,0.15);
@@ -552,7 +552,6 @@ text-align:center;
 position:relative;
 z-index:10;
 font-size:14px;
-
 }
 
 #entity .header .container{
@@ -587,13 +586,13 @@ height:200px;
 position:absolute;
 z-index:2;
 left:0;
-top:-38px;
+top:-150px;
 }
 
 
-#entity .coming-soon{
+#entity .available{
 position:absolute;
-right:130px;
+right:140px;
 top:-76px;
 }
 
@@ -939,7 +938,7 @@ text-align:center;
 margin:30px auto;
 }
 
-#mobile-entity .coming-soon{
+#mobile-entity .available{
 margin:0 auto 25px;
 }
 
@@ -1000,8 +999,8 @@ top:auto;
 }
 
 /* MISC */
-.coming-soon{
-background:url(http://stamped.com.static.images.s3.amazonaws.com/assets/img/app-store-coming-soon.png) left top no-repeat;
+.available{
+background:url(http://stamped.com.static.images.s3.amazonaws.com/assets/img/app-store-available.png) left top no-repeat;
 width:161px;
 height:49px;
 }
