switch todo to fav

--- a/sites/stamped.com/bin/www/templates/notifications.html
+++ b/sites/stamped.com/bin/www/templates/notifications.html
@@ -127,7 +127,7 @@
                                 <h2>To-do's</h2>
                                 <span class="description">Someone adds ones of your stamps as a to-do.</span>
                             </div>
-                            <div class="slider" id="email_alert_todos">
+                            <div class="slider" id="email_alert_fav">
                                 <span class="knob replaced">knob</span>
                                 <span class="mask replaced">mask</span>
                                 <span class="background replaced">background</span>
