Updates to website: footer, temporary asset links, privacy / terms / faq

--- a/sites/stamped.com/bin/www/templates/about.html
+++ b/sites/stamped.com/bin/www/templates/about.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
@@ -13,13 +13,13 @@
                 
         <!-- Style -->
         <link rel="stylesheet" href="http://static.stamped.com/assets/css/normalize.css" type="text/css" media="screen" />
-        <link rel="stylesheet" href="http://static.stamped.com/assets/css/styles.css" type="text/css" media="screen" />
-        <link rel="shortcut icon" href="http://static.stamped.com/assets/img/favicon.ico"/>
-        <link rel="apple-touch-icon" href="http://static.stamped.com/assets/img/apple-touch-icon.png"/>
+        <link rel="stylesheet" href="http://stamped.com.static.images.s3.amazonaws.com/assets/css/screen.css" type="text/css" media="screen" />
+        <link rel="shortcut icon" href="http://stamped.com.static.images.s3.amazonaws.com/assets/img/favicon.ico"/>
+        <link rel="apple-touch-icon" href="http://stamped.com.static.images.s3.amazonaws.com/assets/img/apple-touch-icon.png"/>
 
         <!-- Magic -->
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-        <script type="text/javascript" src="http://static.stamped.com/assets/js/function.js"></script>
+        <script type="text/javascript" src="http://stamped.com.static.images.s3.amazonaws.com/assets/js/magic.js"></script>
     </head>
     <body>
         <div id="page" class="flood">
@@ -140,6 +140,22 @@
                             </div>
                         </li>
                     </ul>
+                    
+                    <div class="advisor">
+                        <h3 class="divide">Advisors</h3> 
+                        <span class="name">Mario Batali</span>
+                        <div class="history">
+                            <p>With nineteen restaurants, nine cookbooks and a host of television shows including ABC's The Chew, Mario Batali is one of the most recognized and respected chefs working in America today. In 2008, Mario started the Mario Batali Foundation with the mission of feeding, protecting, educating, and empowering children. To learn more about Mario's mission, visit <a href="http://www.mariobatalifoundation.org">www.mariobatalifoundation.org</a>.</p><a class="follow" href="http://twitter.com/mariobatali">Follow @mariobatali</a>
+                        </div>
+                        <br /><br />
+                        <span class="name">Kevin Systrom</span>
+                        <div class="history">
+                            <p>Kevin Systrom is the CEO and co-founder of <a href="http://instagram.com/">Instagram</a>, the popular photo-sharing service with over 12 million users. Kevin was recently named to Fortune's 40-under-40 list, and got his first taste of the startup world as an intern at Odeo, which later became Twitter. He also spent two years at Google, working on Gmail and Google Reader. Kevin graduated from Stanford University in 2006 with a BS in Management Science & Engineering.</p>
+                            <a class="follow" href="http://twitter.com/kevin">Follow @kevin</a><br /><br /><br />
+                        </div>
+                        <span class='note'><strong>Note:</strong> Advisors own shares in Stamped, Inc.</span>
+                    </div>
+                
                 </div> <!-- /team -->
                 <div class="investor-contact">
                     <h3 class="divide">Our investors</h3>
@@ -157,7 +173,13 @@
                 <div class="bottom-wave"></div>
             </div> <!-- /sheet -->    
             <div class="more">
-                <span>&copy;2011 Stamped Inc.</span>
+                <a href="/about">About Us</a>
+                <a href="/faq">FAQ</a>
+                <a href="http://help.stamped.com">Help</a>
+                <a href="http://blog.stamped.com">Blog</a>
+                <a href="/terms-of-service">Terms of Service</a>
+                <a href="/privacy">Privacy Policy</a>
+                <span class="copyright">&copy;2011 Stamped Inc.</span>
             </div> 
             </div>
         </div> <!-- /page -->
