--- a/sites/stamped.com/bin/www/templates/faq-mobile.html
+++ b/sites/stamped.com/bin/www/templates/faq-mobile.html
@@ -74,12 +74,12 @@ font-weight: normal;
 
 <h2>How is this different from Yelp?</h2>
 
-<p>Yelp is optimized for the average rating of a large crowd. Stamped is designed to bring you only the best things, from only people you know and trust.</p>
+<p>Yelp is optimized for the average rating of a large, anonymous crowd. Stamped is designed to bring you only the best things, from only people you know and trust.</p>
 
 
 <h2>How is stamping different than liking something on Facebook?</h2>
 
-<p>Stamping is reserved for only the best things, which is why you get just 100 stamps to start. Thus, Stamped helps you discover only what your friends like best as opposed to ALL of the things they like. It's optimized for quality over quantity.</p>
+<p>Stamping is very different than using the Facebook "like" button. Facebook "likes" are designed for quick feedback around web content, while a stamp is designed for a meaningful recommendation of a real-world experience, like a restaurant or movie. Additionally, Stamped is optimized for quality over quantity, with everybody only getting 100 stamps to start.</p>
 
 
 <h2>How much does Stamped cost to download?</h2>
