--- a/sites/stamped.com/bin/www/templates/index.html
+++ b/sites/stamped.com/bin/www/templates/index.html
@@ -13,10 +13,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=0.36">
         
         <!-- Style -->
-        <link rel="stylesheet" href="http://stamped.com.static.images.s3.amazonaws.com/assets/css/normalize.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="http://static.stamped.com/assets/css/normalize.css" type="text/css" media="screen" />
         <link rel="stylesheet" href="http://stamped.com.static.images.s3.amazonaws.com/assets/css/screen.css" type="text/css" media="screen" />
-        <link rel="shortcut icon" href="/favicon.ico"/>
-        <link rel="apple-touch-icon" href="/apple-touch-icon.png"/>
+        <link rel="shortcut icon" href="http://stamped.com.static.images.s3.amazonaws.com/assets/img/favicon.ico"/>
+        <link rel="apple-touch-icon" href="http://stamped.com.static.images.s3.amazonaws.com/assets/img/apple-touch-icon.png"/>
 
         <!-- Magic -->
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
@@ -98,7 +98,7 @@ your friends have stamped.</p>
                     <a href="http://help.stamped.com">Help</a>
                     <a href="http://blog.stamped.com">Blog</a>
                     <a href="/terms-of-service">Terms of Service</a>
-                    <a href="/privacy-policy">Privacy Policy</a>
+                    <a href="/privacy">Privacy Policy</a>
                     <span class="copyright">&copy;2011 Stamped Inc.</span>
                 </div> 
             
