--- a/sites/stamped.com/bin/www/templates/notifications.html
+++ b/sites/stamped.com/bin/www/templates/notifications.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
@@ -14,8 +14,8 @@
         <!-- Style -->
         <link rel="stylesheet" href="http://stamped.com.static.images.s3.amazonaws.com/assets/css/normalize.css" type="text/css" media="screen" />
         <link rel="stylesheet" href="http://stamped.com.static.images.s3.amazonaws.com/assets/css/screen.css" type="text/css" media="screen" />
-        <link rel="shortcut icon" href="/favicon.ico"/>
-        <link rel="apple-touch-icon" href="/apple-touch-icon.png"/>
+        <link rel="shortcut icon" href="http://stamped.com.static.images.s3.amazonaws.com/assets/img/favicon.ico"/>
+        <link rel="apple-touch-icon" href="http://stamped.com.static.images.s3.amazonaws.com/assets/img/apple-touch-icon.png"/>
 
         <!-- Magic -->
         <script type="text/javascript">
@@ -139,7 +139,13 @@
                 <div class="bottom-wave"></div>
             </div> <!-- /sheet -->    
             <div class="more">
-                <span>&copy;2011 Stamped Inc.</span>
+                <a href="/about">About Us</a>
+                <a href="/faq">FAQ</a>
+                <a href="http://help.stamped.com">Help</a>
+                <a href="http://blog.stamped.com">Blog</a>
+                <a href="/terms-of-service">Terms of Service</a>
+                <a href="/privacy">Privacy Policy</a>
+                <span class="copyright">&copy;2011 Stamped Inc.</span>
             </div> 
             </div>
         </div> <!-- /page -->
