Keeping the logo positioning consistent across all pages

--- a/sites/stamped.com/bin/www/assets/css/screen.css
+++ b/sites/stamped.com/bin/www/assets/css/screen.css
@@ -288,7 +288,7 @@ position:relative;
 margin:-180px auto 0;
 float:none;
 position: relative;
-bottom:-195px;
+bottom:-197px;
 }
 
 #home.public .pitch{
@@ -620,7 +620,7 @@ margin-bottom:20px;
 padding:10px 0;
 }
 
-#page.public .more .copyright{
+#page .more .copyright{
 float:right;
 }
 
