--- a/sites/stamped.com/bin/www/templates/index.html
+++ b/sites/stamped.com/bin/www/templates/index.html
@@ -14,13 +14,13 @@
         
         <!-- Style -->
         <link rel="stylesheet" href="http://static.stamped.com/assets/css/normalize.css" type="text/css" media="screen" />
-        <link rel="stylesheet" href="http://stamped.com.static.images.s3.amazonaws.com/assets/css/screen.css" type="text/css" media="screen" />
-        <link rel="shortcut icon" href="http://stamped.com.static.images.s3.amazonaws.com/assets/img/favicon.ico"/>
-        <link rel="apple-touch-icon" href="http://stamped.com.static.images.s3.amazonaws.com/assets/img/apple-touch-icon.png"/>
+        <link rel="stylesheet" href="http://static.stamped.com/assets/css/screen.css" type="text/css" media="screen" />
+        <link rel="shortcut icon" href="http://static.stamped.com/assets/img/favicon.ico"/>
+        <link rel="apple-touch-icon" href="http://static.stamped.com/assets/img/apple-touch-icon.png"/>
 
         <!-- Magic -->
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-        <script type="text/javascript" src="http://stamped.com.static.images.s3.amazonaws.com/assets/js/magic.js"></script>
+        <script type="text/javascript" src="http://static.stamped.com/assets/js/magic.js"></script>
     </head>
     <body>
         <div id="home" class="wrap public flood">
@@ -36,10 +36,10 @@
                         <div id="tool-tipper">
                             <span class="tip-1 tooltip active" rel="1">
                                 <div class="imager image-rest">
-                                    <img src="http://stamped.com.static.images.s3.amazonaws.com/assets/img/public-home/intro-stamp-is-five-star.png" alt="intro-stamp-is-five-star" />
+                                    <img src="http://static.stamped.com/assets/img/public-home/intro-stamp-is-five-star.png" alt="intro-stamp-is-five-star" />
                                 </div>
                                 <div class="imager image-active">
-                                    <img src="http://stamped.com.static.images.s3.amazonaws.com/assets/img/public-home/intro-stamp-is-five-star-active.png" alt="intro-stamp-is-five-star" />
+                                    <img src="http://static.stamped.com/assets/img/public-home/intro-stamp-is-five-star-active.png" alt="intro-stamp-is-five-star" />
                                 </div>
                                 <div class="text">
                                     <p class="main">A stamp is a five-star recommendation.</p>
@@ -48,10 +48,10 @@
                             </span>
                             <span class="tip-2 tooltip" rel="2">
                                 <div class="imager image-rest">
-                                    <img src="http://stamped.com.static.images.s3.amazonaws.com/assets/img/public-home/intro-stamp-is-shared.png" alt="intro-stamp-is-five-star" />
+                                    <img src="http://static.stamped.com/assets/img/public-home/intro-stamp-is-shared.png" alt="intro-stamp-is-five-star" />
                                 </div>
                                 <div class="imager image-active">
-                                    <img src="http://stamped.com.static.images.s3.amazonaws.com/assets/img/public-home/intro-stamp-is-shared-active.png" alt="intro-stamp-is-five-star" />
+                                    <img src="http://static.stamped.com/assets/img/public-home/intro-stamp-is-shared-active.png" alt="intro-stamp-is-five-star" />
                                 </div>
                                 <div class="text">
                                     <p class="main">A stamp is shared with your friends.</p>
@@ -60,10 +60,10 @@
                             </span>
                             <span class="tip-3 tooltip" rel="3">
                                 <div class="imager image-rest">
-                                    <img src="http://stamped.com.static.images.s3.amazonaws.com/assets/img/public-home/intro-stamp-is-useful.png" alt="intro-stamp-is-five-star" />
+                                    <img src="http://static.stamped.com/assets/img/public-home/intro-stamp-is-useful.png" alt="intro-stamp-is-five-star" />
                                 </div>
                                 <div class="imager image-active">
-                                    <img src="http://stamped.com.static.images.s3.amazonaws.com/assets/img/public-home/intro-stamp-is-useful-active.png" alt="intro-stamp-is-five-star" />
+                                    <img src="http://static.stamped.com/assets/img/public-home/intro-stamp-is-useful-active.png" alt="intro-stamp-is-five-star" />
                                 </div>
                                 <div class="text">
                                     <p class="main">A stamp is useful.</p>
@@ -74,14 +74,14 @@ your friends have stamped.</p>
                             
                             <div id="iphone">
                                 <div class="screen active">
-                                    <img src="http://stamped.com.static.images.s3.amazonaws.com/assets/img/public-home/screen-five-star.png"/>
+                                    <img src="http://static.stamped.com/assets/img/public-home/screen-five-star.png"/>
                                 </div>
                                 
                                 <div class="screen">
-                                    <img src="http://stamped.com.static.images.s3.amazonaws.com/assets/img/public-home/screen-shared-stamp.png"/>
+                                    <img src="http://static.stamped.com/assets/img/public-home/screen-shared-stamp.png"/>
                                 </div>
                                 <div class="screen">
-                                    <img src="http://stamped.com.static.images.s3.amazonaws.com/assets/img/public-home/screen-stamp-useful.png"/>
+                                    <img src="http://static.stamped.com/assets/img/public-home/screen-stamp-useful.png"/>
                                 </div>
                             </div>
                             <a class="video-block video-launcher" href="#">
