--- a/sites/stamped.com/bin/www/templates/password-reset.html
+++ b/sites/stamped.com/bin/www/templates/password-reset.html
@@ -28,7 +28,7 @@
         
         #home.public .change_password {
             height: 35px;
-            background: url(http://stamped.com.static.images.s3.amazonaws.com/assets/img/title-change-password.png) center top no-repeat;
+            background: url(http://static.stamped.com/assets/img/title-change-password.png) center top no-repeat;
             margin: 174px auto 14px;
         }
         
@@ -38,7 +38,7 @@
         #change_pw input.text_input { 
             width:510px; 
             height:50px; 
-            background:url(http://stamped.com.static.images.s3.amazonaws.com/assets/img/input-large-sprite.png) 0px 0px no-repeat;
+            background:url(http://static.stamped.com/assets/img/input-large-sprite.png) 0px 0px no-repeat;
             border:none;
             padding: 25px 30px 25px;
             color: #595959;
@@ -50,7 +50,7 @@
         #change_pw input.button_input {
             width:150px;
             height:70px;
-            background:url(http://stamped.com.static.images.s3.amazonaws.com/assets/img/button-change-sprite.png) 0px 0px no-repeat;
+            background:url(http://static.stamped.com/assets/img/button-change-sprite.png) 0px 0px no-repeat;
             border:none;
             text-indent:-1000em;
             margin: 10px auto 0;
