--- a/sites/stamped.com/bin/www/templates/notifications.html
+++ b/sites/stamped.com/bin/www/templates/notifications.html
@@ -13,7 +13,7 @@
                 
         <!-- Style -->
         <link rel="stylesheet" href="http://static.stamped.com/assets/css/normalize.css" type="text/css" media="screen" />
-        <link rel="stylesheet" href="http://static.stamped.com/assets/css/screen.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="http://stamped.com.static.images.s3.amazonaws.com/assets/css/screen.css" type="text/css" media="screen" />
         <link rel="shortcut icon" href="http://static.stamped.com/assets/img/favicon.ico"/>
         <link rel="apple-touch-icon" href="http://static.stamped.com/assets/img/apple-touch-icon.png"/>
 
