--- a/sites/stamped.com/bin/www/assets/css/screen.css
+++ b/sites/stamped.com/bin/www/assets/css/screen.css
@@ -1255,3 +1255,22 @@ top:-33px;
 .close:hover{
 background-position:left bottom;
 }
+
+.stutter-bar{
+position:fixed;
+top:0;
+display:none;
+text-align:center;
+padding:15px 0;
+width:100%;
+z-index:5000;
+background-color:#fff;
+-webkit-box-shadow:0 0 10px rgba(0,0,0,0.35);
+}
+
+.stutter-bar .success{
+font-size:16px;
+font-weight:bold;
+background:url(http://static.stamped.com/assets/img/notifications_check.png) left 1px no-repeat;
+padding-left:23px;
+}
