Bart keeps tweaking the FAQ!

--- a/sites/stamped.com/bin/www/templates/faq.html
+++ b/sites/stamped.com/bin/www/templates/faq.html
@@ -124,7 +124,7 @@
                     
                     <div id="question-9" class="question"> 
                     <h2>None of my friends are on Stamped. Can I still use it?</h2>
-                    <p>While Stamped is great with your friends, you can also follow the experts you trust to get great recommendations. Try following Peter Travers (Rolling Stone movie critic) if you're waiting for your friends.</p>
+                    <p>While Stamped is great with your friends, you can also follow the experts you trust to get great recommendations. Check out suggested users like Peter Travers (Rolling Stone film critic) if you're waiting for your friends.</p>
                     </div>
                     
                     <div id="question-10" class="question"> 
