--- a/sites/stamped.com/bin/www/templates/notifications.html
+++ b/sites/stamped.com/bin/www/templates/notifications.html
@@ -44,7 +44,7 @@
                                 </div>
                             </div>
                             <span class="username">{{ screen_name }}</span>
-                            <span class="real-name">{{ name }}</span>
+                            <span class="real-name"><!--{{ name }}--> &nbsp;</span>
                         </div>
                         <a href="#" class="toggle-all">Toggle All</a>
                     </div>
