--- a/sites/stamped.com/bin/alerts/templates/email_invite.html.j2
+++ b/sites/stamped.com/bin/alerts/templates/email_invite.html.j2
@@ -42,7 +42,7 @@
                                         
                                         <tr>
                                             <td width="600" height="120" align="center" valign="middle">
-                                                <a href="http://www.stamped.com/download"><img src="http://static.stamped.com/assets/img/email-button-download.png" width="245" height="82" alt="Free Download - Available in the App Store"></a>
+                                                <a href="http://itunes.apple.com/us/app/stamped/id467924760?ls=1&mt=8"><img src="http://static.stamped.com/assets/img/email-button-download.png" width="245" height="82" alt="Free Download - Available in the App Store"></a>
                                             </td>
                                         </tr>
                                         
