--- a/sites/stamped.com/bin/www/templates/index.html
+++ b/sites/stamped.com/bin/www/templates/index.html
@@ -32,7 +32,7 @@
                         <p class="pitch replaced">Put your stamp of approval on the world</p>
                         <p class="intro">Stamped is a new way to recommend only what you like best&mdash;restaurants, books, movies, music and more.
                         <span>No noise, no strangers, just the things you and your friends love. <a href="#" class="video-launcher">Watch the video</a>.</span></p>
-                        <a class="itunes replaced" href="http://www.stamped.com/download">Free Download. Available in the App Store</a>
+                        <a class="itunes replaced" href="http://itunes.apple.com/us/app/stamped/id467924760?ls=1&mt=8">Free Download. Available in the App Store</a>
                         <div id="tool-tipper">
                             <span class="tip-1 tooltip active" rel="1">
                                 <div class="imager image-rest">
