--- a/sites/stamped.com/bin/www/templates/sdetail-mobile.html
+++ b/sites/stamped.com/bin/www/templates/sdetail-mobile.html
@@ -99,7 +99,7 @@
                     <div class="bottom-wave"></div>
                 </div>
                 <div class="footer">
-                    <a href="http://www.stamped.com/download" class="available replaced">Available on the App Store</a>
+                    <a href="http://itunes.apple.com/us/app/stamped/id467924760?ls=1&mt=8" class="available replaced">Available on the App Store</a>
                     <div class="more">
                         <span>&copy;2011 Stamped Inc.</span>
                     </div> 
