--- a/sites/stamped.com/bin/www/templates/notifications.html
+++ b/sites/stamped.com/bin/www/templates/notifications.html
@@ -30,7 +30,7 @@
             <div class="wrap">
             <div class="sheet">
                 <div class="top-wave"></div>
-                <a href="." class="brand replaced">Stamped</a>
+                <a href="/" class="brand replaced">Stamped</a>
                 <div class="inner" id="notifications-page">
                     <h1 class="replaced text-email-notification-settings">Email Notifications Settings</h1>
                     <div class="personal-status">
