--- a/sites/stamped.com/bin/www/templates/index.html
+++ b/sites/stamped.com/bin/www/templates/index.html
@@ -11,6 +11,7 @@
         <meta name="copyright" content="Stamped, Inc."> 
         <meta name="robots" content="index,follow"> 
         <meta name="viewport" content="width=device-width, initial-scale=0.36">
+        <meta property="og:image" content="http://static.stamped.com/assets/img/stamped-logo.png" />
         
         <!-- Style -->
         <link rel="stylesheet" href="http://static.stamped.com/assets/css/normalize.css" type="text/css" media="screen" />
