--- a/sites/stamped.com/bin/www/templates/sdetail.html
+++ b/sites/stamped.com/bin/www/templates/sdetail.html
@@ -10,7 +10,8 @@
         <meta name="author" content="Stamped, Inc."> 
         <meta name="copyright" content="Stamped, Inc."> 
         <meta name="robots" content="index,follow"> 
-        <meta name="viewport" content="width=950">         
+        <meta name="viewport" content="width=950">    
+        <meta property="og:image" content="http://static.stamped.com/logos/{{ user.color_primary }}-{{ user.color_secondary }}-logo-195x195.png" />
         
         <!-- Style --> 
         <link href="http://cloud.webtype.com/css/98498264-8838-4e2c-a0a6-d68fc97fdaf3.css" rel="stylesheet" type="text/css" /> 
