--- a/internal/projects/bulleit/Interfaces/StampDetailViewController.xib
+++ b/internal/projects/bulleit/Interfaces/StampDetailViewController.xib
@@ -143,7 +143,7 @@
 							</object>
 							<object class="IBUIButton" id="276142279">
 								<reference key="NSNextResponder" ref="490942180"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">-2147483356</int>
 								<string key="NSFrameSize">{311, 73}</string>
 								<reference key="NSSuperview" ref="490942180"/>
 								<reference key="NSWindow"/>
@@ -859,7 +859,6 @@
 						<string key="NSFrame">{{255, 399}, {50, 16}}</string>
 						<reference key="NSSuperview" ref="880728759"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:311</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -1581,6 +1580,7 @@
 					<string>91.IBPluginDependency</string>
 					<string>93.IBPluginDependency</string>
 					<string>93.IBUIButtonInspectorSelectedEdgeInsetMetadataKey</string>
+					<string>93.IBUIButtonInspectorSelectedStateConfigurationMetadataKey</string>
 					<string>94.IBPluginDependency</string>
 					<string>95.IBPluginDependency</string>
 					<string>96.IBPluginDependency</string>
@@ -1651,6 +1651,7 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<real value="2"/>
+					<real value="0.0"/>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -1668,7 +1669,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">126</int>
+			<int key="maxID">127</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
