--- a/sites/stamped.com/bin/www/templates/licenses-mobile.html
+++ b/sites/stamped.com/bin/www/templates/licenses-mobile.html
@@ -84,6 +84,16 @@ font-weight: normal;
 </div>
 
 <div>
+<strong>PLCrashReporter</strong><br><a href="http://code.google.com/p/plcrashreporter/">http://code.google.com/p/plcrashreporter/</a>
+<p>Author: Landon Fuller <a href="mailto:landonf@plausiblelabs.com">landonf@plausiblelabs.com</a>
+<br>Copyright (c) 2008-2009 Plausible Labs Cooperative, Inc. All rights reserved.
+<br>Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+<br>The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+<br>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+</p>
+</div>
+
+<div>
 <strong>Amazon API</strong><br><a href="https://affiliate-program.amazon.com/gp/advertising/api/detail/agreement.html">https://affiliate-program.amazon.com/gp/advertising/api/detail/agreement.html</a>
 <p>CERTAIN CONTENT THAT APPEARS IN THIS APPLICATION COMES FROM AMAZON SERVICES LLC. THIS CONTENT IS PROVIDED 'AS IS' AND IS SUBJECT TO CHANGE OR REMOVAL AT ANY TIME.</p>
 </div>
